# happy_coding

./: .dockerignore  .editorconfig  .env.example  .flake8  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.bat  setup.sh
alembic/: env.py
docker/: Dockerfile
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: example.py
src/config/: __init__.py  database.py  settings.py
src/middleware/: __init__.py  example_middleware.py
src/models/: __init__.py  example.py
src/schemas/: __init__.py  example.py
src/services/: __init__.py  example_service.py
src/utils/: __init__.py  jwt_utils.py  security.py
tests/: test_main.py
